apps/demo-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-web
  namespace: default
  labels:
    app: demo-web
spec:
  replicas: 4
  selector:
    matchLabels:
      app: demo-web
  template:
    metadata:
      labels:
        app: demo-web
    spec:
      containers:
      - name: web
        image: ligum/demo-app:6f3bd37b10b5d62a136f11c6b8ceb8ea07f1bc6a
        ports:
        - containerPort: 80
