apps/demo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-web-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: demo-web
